--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,13 +1,15 @@
+---
 suites:
-  cached_adapter_suite:
-    namespace: League\Flysystem\Cached
-    psr4_prefix: League\Flysystem\Cached
+      cached_adapter_suite:
+        namespace: League\Flysystem\Cached
+        psr4_prefix: League\Flysystem\Cached
 extensions:
-    - PhpSpec\Extension\CodeCoverageExtension
+  - PhpSpec\Extension\CodeCoverageExtension
+formatter.name: pretty
 code_coverage:
   format:
     - html
-    - text
+    -
     - clover
   output:
     html: coverage
