--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - travis_retry composer install --no-interaction --prefer-source
 
 script:
-  - bin/phpspec run
+  - vendor/bin/phpspec run
 
 after_script:
   - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; wget https://scrutinizer-ci.com/ocular.phar; fi;'
