Corrected phpspec psr4 prefix

--- a/phpspec.hhvm.yml
+++ b/phpspec.hhvm.yml
@@ -1,6 +1,6 @@
 ---
 suites:
       event_suite:
-        namespace: League\Flysystem\AwsS3v3
-        psr4_prefix: League\Flysystem\AwsS3v3
+        namespace: League\Flysystem\Cached
+        psr4_prefix: League\Flysystem\Cached
 formatter.name: pretty
