Corrected coverage upload.php

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ script:
   - vendor/bin/phpspec run
 
 after_script:
-  - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; wget https://scrutinizer-ci.com/ocular.phar; fi;'
+  - wget https://scrutinizer-ci.com/ocular.phar
   - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.xml; fi;'
