--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ before_install:
 
 install:
   - travis_retry composer install --no-interaction --prefer-source
-
 script:
   - vendor/bin/phpspec run
 
 after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
+  - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then composer global require 'phpunit/phpcov=*'; fi;
+  - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi;
+  - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then phpcov merge --clover coverage.xml clover; fi;
   - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.xml; fi;'
