--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "henrikbjorn/phpspec-code-coverage": "~1.0@dev"
     },
     "require-dev": {
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "phpunit/phpunit": "~4.1",
+        "mockery/mockery": "~0.9",
+        "tedivm/stash": "~0.12"
     },
     "license": "MIT",
     "authors": [
