--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - travis_retry composer install --no-interaction --prefer-source
 script:
   - vendor/bin/phpspec run
+  - vendor/bin/phpunit
 
 after_script:
   - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then composer require phpunit/phpcov=*; fi;'
