--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     },
     "require": {
-        "league/flysystem": "1.0.0-alpha1",
+        "league/flysystem": "~1.0@alpha",
         "henrikbjorn/phpspec-code-coverage": "~1.0@dev"
     },
     "require-dev": {
