--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     },
     "require": {
-        "league/flysystem": "~1.0@alpha"
+        "league/flysystem": "~1.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1",
