--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "tedivm/stash": "~0.12",
         "henrikbjorn/phpspec-code-coverage": "~1.0@dev"
     },
+    "suggest": {
+      "ext-phpredis": "Pure C implemented extension for PHP"
+    },
     "license": "MIT",
     "authors": [
         {
