--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     },
     "require": {
         "league/flysystem": "~1.0",
-        "psr/cache": "^1.0.0"
+        "psr/cache": "^2.0|^3.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^3.4",
-        "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "~0.9",
+        "phpspec/phpspec": "^7.4.0",
+        "phpunit/phpunit": "^8.5",
+        "mockery/mockery": "^1.6",
         "predis/predis": "~1.0",
         "tedivm/stash": "~0.12"
     },
