--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,21 @@
 {
-    "name": "league/flysystem-cached-adapter",
-    "description": "An adapter decorator to enable meta-data caching.",
-    "autoload": {
-        "psr-4": {
-            "League\\Flysystem\\Cached\\": "src/"
-        }
-    },
-    "require": {
-        "league/flysystem": "~1.0",
-        "psr/cache": "^1.0.0"
-    },
-    "require-dev": {
-        "phpspec/phpspec": "^3.4",
-        "phpunit/phpunit": "^5.7",
-        "mockery/mockery": "~0.9",
-        "predis/predis": "~1.0",
-        "tedivm/stash": "~0.12"
-    },
-    "suggest": {
-      "ext-phpredis": "Pure C implemented extension for PHP"
-    },
+    "name": "jgivoni/flysystem-cache-adapter",
+    "description": "A PSR-6 compliant adapter decorator for Flysystem v3 that caches file metadata to improve performance.",
     "license": "MIT",
     "authors": [
         {
-            "name": "frankdejonge",
-            "email": "info@frenky.net"
+            "name": "Jakob Givoni",
+            "email": "jakob@givoni.dk"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "jgivoni\\Flysystem\\Cache\\": "src/"
+        }
+    },
+    "require": {
+        "php": "^8.2",
+        "league/flysystem": "^3.0",
+        "psr/cache": "^3.0"
+    }
 }
