--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "psr/cache": "^3.0"
     },
     "require-dev": {
+        "ext-zend-opcache": "*",
         "ext-xdebug": "*",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.3",
