--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
   job1:
     strategy:
       matrix:
-        php_version: ["7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
+        php_version: ["8.0", "8.1", "8.2"]
     name: PhpStan static analyzer ${{ matrix.php_version }}
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +39,7 @@ jobs:
   job2:
     strategy:
       matrix:
-        php_version: ["7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
+        php_version: ["8.0", "8.1", "8.2"]
     name: PhpUnit unit tests ${{ matrix.php_version }}
     runs-on: ubuntu-latest
     steps:
